Fixes the deallocation helper, it works anew with Java 1.9